--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
       "Day 1: We first met... it was nothing special at the time, just two strangers crossing paths. No feelings. No expectations.",
       "Next Day: We began talking more often. And suddenly, those late-night calls became the best part of my day🥰",
       "Next Day: I noticed your smile when I talked. You laughed at my lame jokes. I could tell—you were interested. And... I was too😊.",
-      "Day 14: I still remember your words... you said I was a material worth dating. Those words haven’t left me since🙃."
+      "Next Day: I still remember your words... you said I was a material worth dating. Those words haven’t left me since🙃."
     ];
 
     let entryIndex = 0;
@@ -209,7 +209,7 @@
     }
 
     function revealLove() {
-      document.getElementById("finalQuestion").innerHTML = "<p>You’ve made my heart smile again😍🥰.</p><p>Thank you for believing in us🥰.</p>";
+      document.getElementById("finalQuestion").innerHTML = "<p>You’ve made my heart smile again😍🥰.</p>";
       createFallingHearts();
     }
 
